<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="8dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="230dp"
            android:scaleType="fitCenter"
            android:id="@+id/img_movies"
            android:layout_marginBottom="4dp"
            tools:src="@color/colorPrimary"/>
        <TextView
            android:layout_toRightOf="@id/img_movies"
            android:layout_toEndOf="@id/img_movies"
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/judul_film"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>
        <TextView
            android:layout_below="@id/tv_title"
            android:layout_toRightOf="@id/img_movies"
            android:layout_toEndOf="@id/img_movies"
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="75"
            android:text="@string/deskripsi_film"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>
        <TextView
            android:layout_below="@id/tv_overview"
            android:layout_toRightOf="@id/img_movies"
            android:layout_toEndOf="@id/img_movies"
            android:id="@+id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_release"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/img_movies"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_set_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/btn_detail"
                android:layout_weight="0.5"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>